<resources>
    <string name="app_name">The Movie Database App</string>
    <string name="the_screen_title">The Screen Title</string>
    <string name="tv_rating">TV Rating</string>
    <string name="date_first_aired">Date First Aired</string>
    <string name="tv_name">TV Name</string>
    <string name="tv_currently_airing">TV Currently Airing</string>
    <string name="tv_airing_today">TV Airing Today</string>
    <string name="tv_show_detail_image">TV Show Detail Image</string>
    <string name="tv_show_name">TV Show Name</string>
    <string name="first_air_date">First Air Date</string>
    <string name="original_language">Original Language</string>
    <string name="last_episode_to_air">Last Episode to air</string>
    <string name="production_country">Production Country</string>
    <string name="last_air_date">Last Air Date</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions_to_user">Instructions To User</string>
    <string name="choose_the_tv_show_to_watch">Choose the TV Show to watch</string>
    <string name="tv_show_currently_airing">TV Show Currently Airing</string>
    <string name="tvshow_airing_today">TVShow Airing Today</string>
    <string name="tv_show_details">TV Show Details</string>
    <string name="favourite_image">Favourite Image</string>
    <string name="favourites">Favourites Shows</string>
    <string name="fav_cur_shows">Favourites For Currently Airing Shows</string>
    <string name="fav_airing_today">Favourites of Shows Airing Today</string>
    <string name="tv_shows_home">Home Screen For TV Shows Airing Now and those Airing Today</string>
    <string name="search">Search</string>
    <string name="dialog_title">Delete Dialog</string>
    <string name="delete_data_from_database">Delete Data From Database?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="search_here">Search here…</string>
    <string name="continue_to">Continue to homepage</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="are_you_already_a_member">Are you already a member?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="or">Or</string>
    <string name="submit_new_password_link">Submit new password link</string>
    <string name="delete_user">Delete user</string>
    <string name="logout">Logout</string>
    <string name="update_password">Update password</string>
    <string name="update_email">Update email</string>
    <string name="update_your_email">Update your email</string>
    <string name="update_your_password">Update your password</string>
    <string name="delete_user_dialog">Are you sure you\n want to delete the user?</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="sure_logout">Are you sure\n you want to log out?</string>
    <string name="yes_log_out">Yes, log out</string>
</resources>