<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FirstScreen"
    tools:ignore="UselessParent">

    <TextView
        android:id="@+id/firstScreenInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/choose_the_tv_show_to_watch"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCurrentAiring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/tv_show_currently_airing"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAiringToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/tvshow_airing_today"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>
