<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/tdFavShowImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tdFavShowName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="0dp"
            android:text="@string/tv_name"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tdFavShowImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tdFavDateFirstAired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/date_first_aired"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tdFavShowImage"
            app:layout_constraintTop_toBottomOf="@+id/tdFavShowName" />

        <TextView
            android:id="@+id/tdFavshowRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_rating"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tdFavShowImage"
            app:layout_constraintTop_toBottomOf="@+id/tdFavDateFirstAired" />

        <ImageView
            android:id="@+id/tdTvFavImageBtn"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/favourite_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/tdFavshowRating"
            app:layout_constraintTop_toBottomOf="@id/tdFavDateFirstAired"
            app:srcCompat="@drawable/heartgrey" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>